--- a/views/users/disCoupons.ejs
+++ b/views/users/disCoupons.ejs
@@ -27,6 +27,8 @@
                                 </div>
                             </div>
                         </div>
+                    <% }else { %> 
+                        <p class="text-primary">This Coupons is not Avaialable</p>    
                     <% } %>
                     <% }) %>
                 </div>
