complete image crop

--- a/views/admin/productAdd.ejs
+++ b/views/admin/productAdd.ejs
@@ -188,7 +188,7 @@
     }
 </script>
 
-<script>
+<!-- <script>
     document.addEventListener("DOMContentLoaded", function () {
   // Get all file inputs and image preview divs
   const fileInputs = document.querySelectorAll('[id^="productImages"]');
@@ -310,8 +310,8 @@
   });
 });
 
-</script>
-<!-- 
+</script> -->
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         // Get all file inputs and image preview divs
@@ -341,6 +341,6 @@
             });
         });
     });
-</script> -->
+</script>
 
 <%- include('./layout/adfooter.ejs') %>
