--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -188,22 +188,22 @@
   
                       
                       <div class="card mt-5 bg-dark">
-                          <div class="card-header bg-secondary text-dark">
+                          <div class="card-header bg-primary text-dark">
                               Top Selling Details
                           </div>
                           <div class="card-body">
                               <div class="row">
                                   <div class="col-md-6">
-                                      <div class="card border-secondary mb-3">
-                                          <div class="card-header bg-secondary text-dark">Top Selling Product</div>
+                                      <div class="card border-primary mb-3">
+                                          <div class="card-header bg-primary text-dark">Top Selling Product</div>
                                           <div class="card-body">
                                               <h5 class="card-title"><%= mostSoldProduct ? mostSoldProduct.name : '0' %></h5>
                                           </div>
                                       </div>
                                   </div>
                                   <div class="col-md-6">
-                                      <div class="card border-secondary mb-3">
-                                          <div class="card-header bg-secondary text-dark">Top Selling Category</div>
+                                      <div class="card border-primary mb-3">
+                                          <div class="card-header bg-primary text-dark">Top Selling Category</div>
                                           <div class="card-body">
                                               <h5 class="card-title"><%= mostSoldCategory ? mostSoldCategory.name : '0' %></h5>
                                           </div>
