--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -21,7 +21,7 @@
                                 <li><a href=" https://wa.me/9778073408" target="_blank"><i class="icon-phone"></i>Chatt: +91 9778073408</a></li>
                                 <li><a href="/wishlist"><i class="icon-heart-o"></i>My Wishlist</a></li>
                                 <li><a href="/about">About Us</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="">Contact Us</a></li>
                                 <% if (!isLoggedIn) { %> 
                                     <li><a href="/login"><i class="icon-user"></i>Login</a></li>
                                 <%}%>
