--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -22,7 +22,7 @@
                                 <li><a href="tel:#"><i class="icon-phone"></i>Call: +91 9778073408</a></li>
                                 <li><a href="/wishlist"><i class="icon-heart-o"></i>My Wishlist</a></li>
                                 <li><a href="/about">About Us</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="">Contact Us</a></li>
                                 <li><a href="/login"><i class="icon-user"></i>Login</a></li>
                             </ul>
                         </li>
