--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -77,7 +77,7 @@
                                         </div>    
                                     </div>
                                     <div class="pt-4">
-                                        <button class="btn-primary" style="border: none;" data-toggle="modal" data-target="#changePasswordModal">Change Password</button>
+                                        <button class="btn-primary" style="border: none;"><a href="/changePassword" class="text-white">Change Password</a></button>
                                         <button class="btn-primary" style="border: none;" data-toggle="modal" data-target="#editProfileModal">Edit profile</button>
                                     </div>
 
@@ -87,74 +87,37 @@
                                 <!-- Edit Profile Modal -->
                                 <div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="editProfileModalLabel" aria-hidden="true">
                                     <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                        <h5 class="modal-title" id="editProfileModalLabel">Edit Profile</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                        </div>
-                                        <div class="modal-body">
-                                        <form action="/profile/<%= user._id %>" method="post" id="editProfileForm" onsubmit="return validateProfile()">
-                                            <div class="form-group">
-                                            <label for="editName" class="pl-3">Name</label>
-                                            <input type="text" name="name" class="form-control" id="editName" value="<%= user.name %>">
-                                            <small id="nameError" class="text-danger"></small>
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="editEmail" class="pl-3">Mobile No</label>
-                                                <input type="text" name="mobile" class="form-control" id="editMobile" value="<%= user.mobile %>">
-                                                <small id="mobilenoError" class="text-danger"></small>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                <button type="submit" name="submit" class="btn btn-primary" >Save changes</button>
-                                            </div>
-                                        </form>
-                                        </div>
-                                       
-                                    </div>
-                                    </div>
-                                </div><!--End Modal-->
-
-                                <!-- Change Password Modal -->
-                                <div class="modal fade" id="changePasswordModal" tabindex="-1" role="dialog" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered" role="document">
                                         <div class="modal-content">
-                                            <div class="modal-header bg-primary text-white">
-                                                <h5 class="modal-title" id="changePasswordModalLabel">Change Password</h5>
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="editProfileModalLabel">Edit Profile</h5>
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                     <span aria-hidden="true">&times;</span>
                                                 </button>
                                             </div>
                                             <div class="modal-body">
-                                                <form action="/profile" method="post" id="changePasswordForm" onsubmit="return validate()">
+                                                <form action="/profile/<%= user._id %>" method="post" id="editProfileForm" onsubmit="return validateProfile()">
                                                     <div class="form-group">
-                                                        <label for="currentPassword" class="pl-3">Current Password</label>
-                                                        <input type="password" name="currentPassword" class="form-control" id="currentPassword" placeholder="Enter current password" >
-                                                        <small><%= message %></small>
-                                                        <small id="currentPasswordError" class="text-danger"></small>
+                                                        <label for="editName" class="pl-3">Name</label>
+                                                        <input type="text" name="name" class="form-control" id="editName" value="<%= user.name %>">
+                                                        <small id="nameError" class="text-danger"></small>
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="newPassword" class="pl-3" >New Password</label>
-                                                        <input type="password" name="newPassword" class="form-control" id="newPassword" placeholder="Enter new password" >
-                                                        <small id="newPasswordError" class="text-danger"></small>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <label for="confirmPassword" class="pl-3" >Confirm New Password</label>
-                                                        <input type="password" name="confirmPassword" class="form-control" id="confirmPassword" placeholder="Confirm new password" >
-                                                        <small id="confirmPasswordError" class="text-danger"></small>
-                                                        
+                                                        <label for="editMobile" class="pl-3">Mobile No</label>
+                                                        <input type="text" name="mobile" class="form-control" id="editMobile" value="<%= user.mobile %>">
+                                                        <small id="mobilenoError" class="text-danger"></small>
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                        <button type="submit" name="submit" class="btn btn-primary">Save Changes</button>
+                                                        <button type="submit" name="submit" class="btn btn-primary">Save changes</button>
                                                     </div>
                                                 </form>
                                             </div>
                                         </div>
                                     </div>
-                                </div><!-- End Change Password Modal -->
+                                </div>
+                                <!--End Modal-->
+
+                               
 
 
                             </div><!-- .End .tab-pane -->
@@ -173,41 +136,7 @@
 <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
 
 <script>
-    function validate() {
-        const currentPassword = document.getElementById('currentPassword').value.trim();
-        const newPassword = document.getElementById('newPassword').value.trim();
-        const confirmPassword = document.getElementById('confirmPassword').value.trim();
-
-        const currentPasswordError = document.getElementById('currentPasswordError');
-        const newPasswordError = document.getElementById('newPasswordError');
-        const confirmPasswordError = document.getElementById('confirmPasswordError')
-
-        currentPasswordError.textContent = '';
-        newPasswordError.textContent = '';
-        confirmPasswordError.textContent = '';
-
-        let isValid = true;
-
-
-        if(currentPassword == ''){
-            currentPasswordError.textContent = "Please Enter your current Password"
-            isValid = false
-        }
-
-        if (!/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$/.test(newPassword)) {
-            newPasswordError.textContent = 'Password must be at least 6 characters and include at least one uppercase letter, one lowercase letter, one number, and one special character.';
-            isValid = false;
-        }
-
-        if(newPassword !== confirmPassword) {
-            confirmPasswordError.textContent = 'Password do not match.';
-            isValid = false
-        }
-
-       
-        return isValid;
-
-    }
+    
 
 function copyReferralCode() {
     const referralCode = document.getElementById('referralCode').innerText;
@@ -222,35 +151,34 @@ function copyReferralCode() {
         });
 }
 </script>
-
 <script>
     function validateProfile() {
         let name = document.getElementById('editName').value.trim();
         let mobile = document.getElementById('editMobile').value.trim();
 
         let nameError = document.getElementById('nameError');
-        let mobilenoError = document.getElementBy('mobilenoError');
+        let mobilenoError = document.getElementById('mobilenoError');
 
         nameError.textContent = '';
         mobilenoError.textContent = '';
+        let isValid = true;
 
         function isOnlyLetters(str) {
             return /^[a-zA-Z\s]+$/.test(str);
         }
-       
 
-        if(name.length < 2 || !isOnlyLetters(name)){
-            nameError.textContent = 'Plese Enter Your Name.'
-            return false;
+        if (name.length < 2 || !isOnlyLetters(name)) {
+            nameError.textContent = 'Please enter a valid name.';
+            isValid = false;
         }
 
-        if(!/^\d{10}$/.test(mobile)){
-            mobilenoError.textContent = 'Please enter a valid 10-digit mobile number.'
-            return false;
+        if (!/^\d{10}$/.test(mobile)) {
+            mobilenoError.textContent = 'Please enter a valid 10-digit mobile number.';
+            isValid = false;
         }
 
-        // Form is valied
-        return true
+        // Form is valid
+        return isValid;
     }
 </script>
 
