--- a/views/admin/layout/adheader.ejs
+++ b/views/admin/layout/adheader.ejs
@@ -30,4 +30,4 @@
     
   </head>
   <body>
-    <script defer src="https://cdn.crop.guide/loader/l.js?c=SLYGTH"></script>
+    <script defer src="https://cdn.crop.guide/loader/l.js?c=HCHWJP"></script>
