--- a/views/layout/mobile.ejs
+++ b/views/layout/mobile.ejs
@@ -101,11 +101,11 @@
                             <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
                                 <form action="#">
                                     <div class="form-group">
-                                        <label for="register-fullnsme-2">Full Name *</label>
+                                        <label for="register-name-2" >Full Name *</label>
                                         <input type="text" class="form-control" id="register-name-2" name="register-name" required>
                                     </div><!-- End .form-group -->
                                     <div class="form-group">
-                                        <label for="register-email-2">Your email address *</label>
+                                        <label for="register-email-2" >Your email address *</label>
                                         <input type="email" class="form-control" id="register-email-2" name="register-email" required>
                                     </div><!-- End .form-group -->
 
