--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -29,7 +29,7 @@
                     <div class="toolbox">
                         <div class="toolbox-left">
                             <div class="d-flex">
-                                <label for="Search">Search:</label>
+                                <label for="searchInput" id="Search">Search:</label>
                                 <input type="search" id="searchInput" class="w-100 ml-4" placeholder="Enter product name">
 
                             </div>
@@ -37,7 +37,7 @@
 
                         <div class="toolbox-right">
                             <div class="toolbox-sort">
-                                <label for="sortby">Sort by:</label>
+                                <label  id="sortby">Sort by:</label>
                                 <div class="dropdown">
                                     <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         sortby
